[package]
name = "SETS"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_ggrs = "0.20.0"
matchbox_socket = { version = "0.14", features = ["ggrs"] }
bytemuck = { version = "1.18", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
